updating regression markdown description

--- a/notebooks/demo_SVMGP-1d-Coupled.ipynb
+++ b/notebooks/demo_SVMGP-1d-Coupled.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Additive Regression \n",
+    "### Multiplicative Regression \n",
     "$$f_c \\sim \\cal{GP}(0,k_c),\\; \\forall c \\in [1..C]$$\n",
-    "$$y^{(n)}|f_1...f_C,x^{(n)} = y^{(n)}|\\sum_c f_c(x^{(n)}_c)$$\n",
+    "$$y^{(n)}|f_1...f_C,x^{(n)} = y^{(n)}|\\prod_c f_c(x^{(n)}_c)$$\n",
     "\n",
     "Functions $f_c$ are all functions of separate covariates $x_c$\n",
     "\n",
